--- a/content/templates/base.html
+++ b/content/templates/base.html
@@ -40,7 +40,8 @@
         {% endblock %}
 
         <footer id="contentinfo" class="body">
-                <a href="https://getpelican.com/">Pelican</a> "notmyidea" theme by <a href="https://www.smashingmagazine.com/2009/08/designing-a-html-5-layout-from-scratch/">Smashing Magazine</a></p>
+	  <a href="https://cfa.harvard.edu/privacy-statement">Privacy</a> |
+          <a href="https://getpelican.com/">Pelican</a> "notmyidea" theme by <a href="https://www.smashingmagazine.com/2009/08/designing-a-html-5-layout-from-scratch/">Smashing Magazine</a></p>
         </footer><!-- /#contentinfo -->
 
 {% include 'analytics.html' %}
